--- a/app/scss/partials/_layout.scss
+++ b/app/scss/partials/_layout.scss
@@ -1,5 +1,6 @@
 #rocketEngine{
   width: 100%;
+      z-index: -1;
 }
 
 #start{
@@ -36,3 +37,8 @@
   -vendor-animation-delay: 20s;
   -vendor-animation-iteration-count: infinite;
 }
+
+.in{
+  background-color: red;
+}
+
