--- a/app/scss/partials/_base.scss
+++ b/app/scss/partials/_base.scss
@@ -12,16 +12,26 @@ h1 {
 }
 table{
   width: 100%;
+  z-index: 1;
 }
 td{
-  background: grey;
+  background: transparent;
   width: 50%;
-}
-
-tr:nth-child(2n) {
-    background: white;
 }
 
 div{
   width: 100%;
+}
+
+svg{
+    position: absolute;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    top: 0px;
+}
+
+td:nth-child(1){
+  text-align: right;
+  padding-right: 20px;
 }
